Fix overlapping container

--- a/packages/desktop_app/src/app/components/screenshot/screenshot.component.scss
+++ b/packages/desktop_app/src/app/components/screenshot/screenshot.component.scss
@@ -15,6 +15,7 @@
     top: 0;
     padding: 24px 0 12px 0;
     background: white;
+    z-index: 100;
     align-items: center;
     display: grid;
     grid-template-columns: min-content auto;
